# django_sandbox_4-30-2021

./: .editorconfig  .gitignore  CONTRIBUTORS.txt  LICENSE  README.rst  manage.py  pyproject.toml  setup.cfg
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
django_sandbox_4_30_2021/: conftest.py
django_sandbox_4_30_2021/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
django_sandbox_4_30_2021/templates/: base.html
django_sandbox_4_30_2021/users/: admin.py  apps.py  models.py  urls.py
django_sandbox_4_30_2021/users/tests/: test_admin.py  test_forms.py  test_models.py  test_urls.py  test_views.py
docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
tests/: test_django_sandbox.py
